set the overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,8 @@
   margin: 0;
   scroll-behavior: smooth;
 }
+
+html,
+body {
+  overflow-x: hidden;
+}
